Fixed links for all, aligned pictures as best as possible, pictures are now workable.

--- a/screen.css
+++ b/screen.css
@@ -23,14 +23,20 @@ h1, h2, h3 {
 img {
   display: block;
   transform: rotate(90deg);
-  width: 60%;
-  height: 60%;
+  width: 30%;
+  height: 30%;
   margin-left: auto;
   margin-right: auto;
 }
 .images {
   display: flex;
   flex-flow: column;
+  padding: 1em;
+}
+.picture{
+  display: flex;
+  flex-flow: column;
+  padding: 1em;
 }
 @media screen and (min-width: 600px){
   img{
